--- a/ExcelImport/ExcelImport/packages.config
+++ b/ExcelImport/ExcelImport/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.10.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="NLog" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Config" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.6.8" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
 </packages>
