Added assets for logo file

--- a/ExcelImport/ExcelImport/ExcelImport.csproj
+++ b/ExcelImport/ExcelImport/ExcelImport.csproj
@@ -91,6 +91,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Content Include="Assets\prahalogo_Pbi_icon.ico" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
